--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ html {
 }
 
 header {
+    top: 0;
+    position: fixed;
     width: 100vw;
     font-family: 'Bebas Neue';
     height: 90px;
@@ -33,6 +35,7 @@ header {
 }
 
 header li {
+    letter-spacing: 3px;
     display: inline-block;
     line-height: 90px;
     list-style: none;
@@ -55,7 +58,6 @@ nav {
     margin: auto;
 }
 
-
 #beherit {
     float: left;
     width: 70px;
@@ -72,7 +74,7 @@ main {
     min-width: 330px;
     height: 100%;
     margin: auto;
-    margin-top: 10vh;
+    margin-top: 20vh;
     margin-bottom: 10vh;
     padding-bottom: 2vh;
     box-shadow: 25px 10px 25px var(--sombraMain);
@@ -151,27 +153,20 @@ ul {
 }
 
 @media (max-width: 1000px) {
-
     #video {
         width: 60%;
         height: 200px;
     }
     
-    .justificado {
-        
+    .justificado {   
         font-size: 1.2rem;
-    }
-    
+    }    
 }
 
-
 @media (max-width: 700px) {
-
-    
     .justificado {
         font-size: 1rem;
     }
-    
 }
 
 @media (max-width: 570px) {
@@ -179,20 +174,28 @@ ul {
         width: 60%;
         height: 170px;
     }
+
     nav {
         width: 90%;
     }
 }
 
 @media (max-width: 400px) {
+    header li {
+        line-height: 50px;
+    }
 
+    main {
+        margin-top: 180px;
+    }
 
     header {
         margin: auto;
+        height: 50px;
     }
     
     header a {
-        font-size: 14px;
+        font-size: 10px;
         text-align: center;
         padding: 20px;
         color: white;
@@ -200,14 +203,14 @@ ul {
     }
 
     #beherit {
-        margin-top: 5%;
-        width: 45px;
+        margin-top: 2%;
+        width: 30px;
         margin-left: 5%;
     }
 
     #titulo {
         width: 70%;
-        margin-left: 17vw;
+        margin-left: 15vw;
     }
 
     #autor-titulo {
@@ -221,7 +224,6 @@ ul {
     #video {
         width: 60%;
         height: 148px;
-
     }
     
     nav {
@@ -235,5 +237,4 @@ ul {
     #introducao {
         font-size: 1rem;
     }
-
 }
