--- a/css/pag1.css
+++ b/css/pag1.css
@@ -44,7 +44,7 @@
 }
 
 #obras-bloco {
-    margin: 7%;
+    margin: 7% 7% 0 7%;
     padding: 4%;
     background-color: rgba(0, 0, 0, 0.163);
     font-family: 'Bebas neue', sans-serif;
