--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ header li {
 }
 
 header a {
+    font-size: 16px;
     text-align: center;
     padding: 30px;
     color: white;
@@ -96,7 +97,7 @@ main {
 }
 
 .video {
-    width: 50%;
+    width: 65%;
     height: 373px;
 }
 
@@ -110,8 +111,8 @@ ul {
 
 .justificado {
     text-indent: 5vw;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     text-align: justify;
-    margin: 8% 5% 8% 5%;
+    margin: 7% 5% 7% 5%;
     font-weight: 500;
 }
